--- a/src/Mindbite.Mox.Images/Views/Shared/EditorTemplates/MultiFile.cshtml
+++ b/src/Mindbite.Mox.Images/Views/Shared/EditorTemplates/MultiFile.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Microsoft.EntityFrameworkCore
 @using Mindbite.Mox.Images
 @using Mindbite.Mox.Images.Attributes
+@using Microsoft.Extensions.Localization
 
 @inject Mindbite.Mox.Services.IDbContextFetcher contextFetcher
+@inject IStringLocalizer localizer
 
 @model Mindbite.Mox.Images.ViewModels.EditorTemplates.MultiFile
 @{
@@ -36,9 +38,9 @@
                         <span class="multi-file-item-title">@files[i].FileName</span>
                     </span>
                     <span class="multi-file-buttons">
-                        <button type="button" class="mox-button" onclick="@(onMoveClicked(Model.Files[i], -1))"><i class="mox-icon arrow-up"></i></button>
-                        <button type="button" class="mox-button" onclick="@(onMoveClicked(Model.Files[i],  1))"><i class="mox-icon arrow-down"></i></button>
-                        <button type="button" class="mox-button" onclick="@(onRemoveClicked(Model.Files[i]))"><i class="mox-icon trash"></i></button>
+                        <button type="button" class="mox-button" onclick="@(onMoveClicked(Model.Files[i], -1))" title="@localizer["Flytta upp"]"><i class="mox-icon arrow-up"></i></button>
+                        <button type="button" class="mox-button" onclick="@(onMoveClicked(Model.Files[i],  1))" title="@localizer["Flytta ner"]"><i class="mox-icon arrow-down"></i></button>
+                        <button type="button" class="mox-button" onclick="@(onRemoveClicked(Model.Files[i]))" title="@localizer["Ta bort"]"><i class="mox-icon trash"></i></button>
                     </span>
                 </li>
             }
@@ -46,7 +48,7 @@
     }
     <label class="multi-file-label" for="@Html.IdFor(x => x.Upload)">
         <span>
-            Välj fil(er)
+            @localizer["Välj fil(er)"]
         </span>
         <input type="file" class="multi-file-input" multiple name="@Html.NameFor(x => x.Upload)" id="@Html.IdFor(x => x.Upload)" onchange="@onUploadChange" />
     </label>
