--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Mindbite.Mox.Extensions
-@using Microsoft.Extensions.Localization;
+@using Microsoft.Extensions.Localization
 @inject IStringLocalizer localizer
 @{
     Layout = (string)ViewData["Layout"];
