--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
@@ -24,7 +24,7 @@
             <li class="break">
                 @if (canCreate)
                 {
-                    @Html.ActionLink(localizer["Skapa {0}", ViewData["ModelDisplayName"]?.ToString().ToLower()], "Create", null, ViewContext.RouteData.Values, new { @class = "mox-button" })
+                    @Html.ActionLink(localizer["Skapa {0}", ViewData["ModelDisplayName"]?.ToString().ToLower() ?? ""], "Create", null, ViewContext.RouteData.Values, new { @class = "mox-button" })
                 }
             </li>
             @await Html.PartialAsync("_Form_Filters")
