--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Delete.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Delete.cshtml
@@ -10,7 +10,7 @@
 @if ((bool)ViewData["RenderDefaultDeleteHeader"])
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
-    <h1>@localizer["Ta bort {0}", ViewData["ModelDisplayName"]?.ToString().ToLower()]</h1>
+    <h1>@localizer["Ta bort {0}", ViewData["ModelDisplayName"]?.ToString().ToLower() ?? ""]</h1>
     @await Html.PartialAsync("Mox/UI/Message")
 }
 
@@ -22,7 +22,7 @@
 @if ((bool)ViewData["CanDelete"])
 {
     <p class="text-danger">@ViewData["ErrorMessage"]</p>
-    <p>@localizer["Är du säker på att du vill ta bort {0}", Html.Value(ViewData["ModelTitleFieldName"]?.ToString())]?</p>
+    <p>@localizer["Är du säker på att du vill ta bort {0}", Html.Value(ViewData["ModelTitleFieldName"]?.ToString() ?? "")]?</p>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -43,7 +43,7 @@
 else
 {
     <p>
-        <strong>@localizer["{0} kan inte tas bort!", Html.Value(ViewData["ModelTitleFieldName"]?.ToString())]</strong><br />
+        <strong>@localizer["{0} kan inte tas bort!", Html.Value(ViewData["ModelTitleFieldName"]?.ToString() ?? "")]</strong><br />
         @ViewData["CanDeleteErrorMessage"]
     </p>
     <fieldset>
