--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mindbite.Mox.Extensions
+@using Mindbite.Mox.UI
 @using Microsoft.Extensions.Localization
 @inject IStringLocalizer localizer
 @{
@@ -9,10 +10,10 @@
 {
     @if(!Context.Request.IsAjaxRequest())
     {
-        @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+        @await Html.Mox().BreadCrumbsAsync(BreadCrumbMenuReference.Current)
     }
     <h1>@localizer["Skapa {0}", ViewData["ModelDisplayName"]?.ToString().ToLower() ?? ""]</h1>
-    @await Html.PartialAsync("Mox/UI/Message")
+    @Html.Mox().Message()
 }
 
 @if (!string.IsNullOrWhiteSpace((string)ViewData["CreateHeaderPartial"]))
