--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Edit.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Mindbite.Mox.Extensions
+﻿@using Mindbite.Mox.UI 
+@using Mindbite.Mox.Extensions 
 @using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer localizer
@@ -11,10 +12,10 @@
 {
     @if (!Context.Request.IsAjaxRequest())
     {
-        @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+        @await Html.Mox().BreadCrumbsAsync(BreadCrumbMenuReference.Current)
     }
     <h1>@ViewData["EditPageHeading"]</h1>
-    @await Html.PartialAsync("Mox/UI/Message")
+    @Html.Mox().Message()
 }
 
 @if (!string.IsNullOrWhiteSpace((string)ViewData["EditHeaderPartial"]))
