--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Mindbite.Mox.Extensions
+﻿@using Mindbite.Mox.UI
+@using Mindbite.Mox.Extensions
 @using Mindbite.Mox.Identity
 @using System.Security.Claims 
 @using Microsoft.Extensions.Localization
@@ -21,11 +22,11 @@
     var isAdmin = await userManager.IsInRoleAsync(user, Mindbite.Mox.Identity.Constants.AdminRole);
 }
 
-@await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+@await Html.Mox().BreadCrumbsAsync(BreadCrumbMenuReference.Current) 
 
 @await Html.PartialAsync("Mox/Identity/_UserSettingsHeader", new { UserId = userId }.ToExpando())
 
-@await Html.PartialAsync("Mox/UI/Message")
+@Html.Mox().Message()
 
 @using (Html.BeginForm())
 {
