--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Delete.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@using Mindbite.Mox.Extensions
+﻿@using Mindbite.Mox.UI 
+@using Mindbite.Mox.Extensions
 @using Microsoft.Extensions.Localization;
 @{
     Layout = "Mox/_Layout";
@@ -6,9 +7,9 @@
 @model Mindbite.Mox.Identity.Data.Models.MoxUser
 @inject IStringLocalizer localizer
 
-@await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
-
+@await Html.Mox().BreadCrumbsAsync(BreadCrumbMenuReference.Current) 
 <h1>@localizer["Ta bort användare"]</h1>
+@Html.Mox().Message()
 
 <div class="mox-display">
     @Html.LabelFor(model => model.UserName)
