--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Mindbite.Mox.Extensions
+﻿@using Mindbite.Mox.UI 
+@using Mindbite.Mox.Extensions
 @using Microsoft.Extensions.Localization
 @using Microsoft.EntityFrameworkCore
 
@@ -13,9 +14,9 @@
     var roleGroupSelectList = roleGroups.Select(x => new SelectListItem(x.GroupName, x.Id.ToString()));
 }
 
-@await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
-
+@await Html.Mox().BreadCrumbsAsync(BreadCrumbMenuReference.Current)
 @await Html.PartialAsync("Mox/Identity/_UserSettingsHeader", new { UserId = ViewContext.RouteData.Values["Id"] }.ToExpando())
+@Html.Mox().Message()
 
 @using (Html.BeginForm())
 {
